--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div class="block_1">
+
+    <div class="content">
         <header>
-            <div class="content">
                 <div class="icon_text">
                     <img src="image/icon/Shape 1.svg" alt=" ">
                     <div class="label_header">
@@ -46,38 +46,42 @@
                         </a>
                     </ul>
                 </div>
+                <div class="info_2">
+                    <button>information</button>
+                </div>
                 <div class="sign">
                     <button>sign up</button>
                 </div>
-        </header>
-        <div class="block_2">
-            <div class="content_info">
-                <div class="info_row">
-                    <div class="info_text_row">
-                        <div class="info_label">
-                            Lorem ipsum dolor sit amet.
+            </header>
+            <div class="block_2">
+                <div class="content_info">
+                    <div class="info_row">
+                        <div class="info_text_row">
+                            <div class="info_label">
+                                Lorem ipsum dolor sit amet.
+                            </div>
+                            <div class="info_text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus modi iure quis commodi?
+                                Dolore fugiat cum quod animi praesentium ipsum ea et, exercitationem natus rerum unde
+                                repellat.
+                            </div>
+                            <div class="info_button_row">
+                                <button>
+                                    buy now
+                                </button>
+                                <button>
+                                    try for free
+                                </button>
+                            </div>
                         </div>
-                        <div class="info_text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus modi iure quis commodi?
-                            Dolore fugiat cum quod animi praesentium ipsum ea et, exercitationem natus rerum unde
-                            repellat.
+                        <div class="video">
+                            <video src="video/test.mp4" poster="image/photo/Rounded_2.png" controls></video>
                         </div>
-                        <div class="info_button_row">
-                            <button>
-                                buy now
-                            </button>
-                            <button>
-                                try for free
-                            </button>
-                        </div>
-                    </div>
-                    <div class="video">
-                        <video src="video/test.mp4"  poster="image/photo/Rounded_2.png" controls></video>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
-</body>
+
+    </body>
 
 </html>
