--- a/index.html
+++ b/index.html
@@ -10,76 +10,135 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/useful.css">
 </head>
 
 <body>
     <div class="content">
         <header>
-                <div class="icon_text">
-                    <img src="image/icon/Shape 1.svg" alt=" ">
-                    <div class="label_header">
-                        <div class="header_dart">
-                            dart
-                        </div>
-                        <p>
-                            service manager
-                        </p>
+            <div class="icon_text">
+                <img src="image/icon/Shape 1.svg" alt=" ">
+                <div class="label_header">
+                    <div class="header_dart">
+                        dart
                     </div>
+                    <p>
+                        service manager
+                    </p>
                 </div>
-                <div class="info">
-                    <ul>
-                        <a href="#" target="blanc">
-                            <li>Home</li>
-                        </a>
-                        <a href="#" target="blanc">
-                            <li>Service</li>
-                        </a>
-                        <a href="#" target="blanc">
-                            <li>Extension</li>
-                        </a>
-                        <a href="#" target="blanc">
-                            <li>Pricing</li>
-                        </a>
-                        <a href="#" target="blanc">
-                            <li>Help</li>
-                        </a>
-                    </ul>
-                </div>
-                <div class="info_2">
-                    <button>information</button>
-                </div>
-                <div class="sign">
-                    <button>sign up</button>
-                </div>
-            </header>
-            <div class="block_2">
-                <div class="content_info">
-                    <div class="info_row">
-                        <div class="info_text_row">
-                            <div class="info_label">
-                                Lorem ipsum dolor sit amet.
-                            </div>
-                            <div class="info_text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus modi iure quis commodi?
-                                Dolore fugiat cum quod animi praesentium ipsum ea et, exercitationem natus rerum unde
-                                repellat.
-                            </div>
-                            <div class="info_button_row">
-                                <button>
-                                    buy now
-                                </button>
-                                <button>
-                                    try for free
-                                </button>
-                            </div>
+            </div>
+            <div class="info">
+                <ul>
+                    <a href="#" target="blanc">
+                        <li>Home</li>
+                    </a>
+                    <a href="#" target="blanc">
+                        <li>Service</li>
+                    </a>
+                    <a href="#" target="blanc">
+                        <li>Extension</li>
+                    </a>
+                    <a href="#" target="blanc">
+                        <li>Pricing</li>
+                    </a>
+                    <a href="#" target="blanc">
+                        <li>Help</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="info_2">
+                <button>information</button>
+            </div>
+            <div class="sign">
+                <button>sign up</button>
+            </div>
+        </header>
+        <div class="block_2">
+            <div class="content_info">
+                <div class="info_row">
+                    <div class="info_text_row">
+                        <div class="info_label">
+                            Lorem ipsum dolor sit amet.
                         </div>
-                        <div class="video">
-                            <video src="video/test.mp4" poster="image/photo/Rounded_2.png" controls></video>
+                        <div class="info_text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus modi iure quis commodi?
+                            Dolore fugiat cum quod animi praesentium ipsum ea et, exercitationem natus rerum unde
+                            repellat.
                         </div>
+                        <div class="info_button_row">
+                            <button>
+                                buy now
+                            </button>
+                            <button>
+                                try for free
+                            </button>
+                        </div>
+                    </div>
+                    <div class="video">
+                        <video src="video/test.mp4" poster="image/photo/Rounded_2.png" controls></video>
                     </div>
                 </div>
             </div>
+        </div>
     </div>
-    </body>
+    <div class="easy_useful_content_body">
+        <div class="easy_useful_content">
+                <div class="easy_title">
+                    <div class="easy_label">Easy & Useful</div>
+                    <div class="easy_text">Project Management Tool</div>
+                    <div class="easy_parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem delectus
+                        recusandae
+                        in deserunt cum atque, sapiente nihil! Exercitationem vitae ad officia optio, porro repellat
+                        totam
+                        perferendis!
+                </div>
+            </div>
+                <div class="easy_content">
+                <div class="easy_block">
+                    <div class="easy_image">
+                        <img src="image/icon/TitleGoesHereList.png" alt="">
+                    </div>
+                    <div class="easy_info_title">
+                        Title Goes Here
+                    </div>
+                    <div class="easy_info_parag">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi at quae debitis ut
+                        maxime
+                        voluptates explicabo quisquam vel?
+                    </div>
+                </div>
+                <div class="easy_block">
+                    <div class="easy_image">
+                        <img src="image/icon/TitleGoesHereBlueMan.png" alt="">
+                    </div>
+                    <div class="easy_info_title">
+                        Title Goes Here
+                    </div>
+                    <div class="easy_info_parag">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi at quae debitis ut
+                        maxime
+                        voluptates explicabo quisquam vel?
+                    </div>
+                </div>
+                <div class="easy_block">
+                    <div class="easy_image">
+                        <img src="image/icon/TitleGoesHerePurpleMan.png" alt="">
+                    </div>
+                    <div class="easy_info_title">
+                        Title Goes Here
+                    </div>
+                    <div class="easy_info_parag">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi at quae debitis ut
+                        maxime
+                        voluptates explicabo quisquam vel?
+                    </div>
+                </div>
+            </div>
+            <div class="get_started">
+                <button>get started</button>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
