--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/info.css">
     <link rel="stylesheet" href="css/useful.css">
+    <link rel="stylesheet" href="css/info_list.css">
 </head>
 
 <body>
@@ -139,6 +140,59 @@
             </div>
         </div>
     </div>
+    <div class="info_width">
+        <div class="info_blue"></div>
+        <div class="info_all">
+            <div class="info_all_block">
+                <div class="info_business">
+                    <div class="info_block_business"></div>
+                    <div class="info_block_business_collumn collumn_info">
+                        <div class="info_block_label">
+                            12000+
+                        </div>
+                        <div class="info_block_text">
+                            Business
+                        </div>
+                    </div>
+                </div>
+                <div class="info_download">
+                    <div class="info_block_download"></div>
+                    <div class="info_block_download_collumn collumn_info">
+                        <div class="info_block_label">
+                            60000+
+                        </div>
+                        <div class="info_block_text">
+                            Downloads
+                        </div>
+                    </div>
+                </div>
+                <div class="info_free_install">
+                    <div class="info_block_install"></div>
+                    <div class="info_block_install_collumn collumn_info">
+                        <div class="info_block_label">
+                            30000+
+                        </div>
+                        <div class="info_block_text">
+                            Free Installs
+                        </div>
+                    </div>
+                </div>
+                <div class="info_pro_users">
+                    <div class="info_block_users"></div>
+                    <div class="info_block_users_collumn collumn_info">
+                        <div class="info_block_label">
+                            40000+
+                        </div>
+                        <div class="info_block_text">
+                            Pro Users
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="info_purple"></div>
+    </div>
+    <div class="services"></div>
 </body>
 
 </html>
