--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/info.css">
     <link rel="stylesheet" href="css/useful.css">
     <link rel="stylesheet" href="css/info_list.css">
+    <link rel="stylesheet" href="css/services.css">
 </head>
 
 <body>
@@ -192,7 +193,15 @@
         </div>
         <div class="info_purple"></div>
     </div>
-    <div class="services"></div>
+    <div class="services_bgc">
+    <div class="services">
+        <div class="services_label">Services</div>
+        <div class="services_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, illum veniam! Repellat facilis soluta laborum aperiam, minus nemo?
+        </div>
+    </div>
+</div>
+
 </body>
 
 </html>
