--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- , initial-scale=0.8 -->
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>manager</title>
     <link rel="stylesheet" href="text/ofont.ru_Raleway.ttf">
     <link rel="stylesheet" href="css/reset.css">
