--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=450">
+    <meta name="viewport" content="width=device-width, user-scalable=yes">
     <title>manager</title>
     <link rel="stylesheet" href="text/ofont.ru_Raleway.ttf">
     <link rel="stylesheet" href="css/reset.css">
