--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <title>manager</title>
-    <link rel="stylesheet" href="text/ofont.ru_Raleway.ttf">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/info.css">
@@ -77,7 +76,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video src="video/test.mp4" poster="image/photo/Rounded_2.png" controls></video>
+                        <video src="video/test.mp4" id="videoPlay" loop></video>
+                            <button id="btnPlay"><label>watch the video</label></button>
                     </div>
                 </div>
             </div>
@@ -202,6 +202,7 @@
     </div>
 </div>
 
+<script src="js/script.js"></script>
 </body>
 
 </html>
