--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             </button>
                         </div>
                     </div>
-                    <div class="video">
-                        <video src="video/test.mp4" id="videoPlay" loop></video>
+                    <div class="video" id="vd">
+                        <video src="video/test.mp4" id="videoPlay" controls loop></video>
                             <button id="btnPlay"><label>watch the video</label></button>
                     </div>
                 </div>
@@ -199,8 +199,144 @@
         <div class="services_text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, illum veniam! Repellat facilis soluta laborum aperiam, minus nemo?
         </div>
+        <div class="statistick_collumn">
+        <div class="service_statistick statistick">
+            <div class="statistick_header">
+                <div class="statistick_name">
+                        <img src="image/icon/trending_up.png" alt="">
+                    <div class="staistick_label">
+                        statistick
+                    </div>
+                </div>
+                <img src="image/icon/arrow_drop_down.png" alt="">
+            </div>
+            <div class="statistick_block">
+                <div class="statistick_img">
+                    <img src="image/photo/statistick_image.png" alt="">
+                </div>
+                <div class="statistick_text">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse vitae, quae natus molestiae repudiandae eligendi
+                         reiciendis cupiditate iure ratione, quidem perspiciatis est!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est repellat et aliquam omnis deserunt odio labore facere! Optio!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="service_inbox statistick">
+            <div class="statistick_header">
+                <div class="statistick_name">
+                        <img src="image/icon/mail.png" alt="">
+                    <div class="staistick_label">
+                        inbox
+                    </div>
+                </div>
+                <img src="image/icon/arrow_drop_down.png" alt="">
+            </div>
+            <div class="statistick_block">
+                <div class="statistick_img">
+                    <img src="image/photo/statistick_image.png" alt="">
+                </div>
+                <div class="statistick_text">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse vitae, quae natus molestiae repudiandae eligendi
+                         reiciendis cupiditate iure ratione, quidem perspiciatis est!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est repellat et aliquam omnis deserunt odio labore facere! Optio!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="service_team statistick">
+            <div class="statistick_header">
+                <div class="statistick_name">
+                    <img src="image/icon/group.png" alt="">
+                    <div class="staistick_label">
+                        statistick
+                    </div>
+                </div>
+                <img src="image/icon/arrow_drop_down.png" alt="">
+            </div>
+            <div class="statistick_block">
+                <div class="statistick_img">
+                    <img src="image/photo/statistick_image.png" alt="">
+                </div>
+                <div class="statistick_text">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse vitae, quae natus molestiae repudiandae eligendi
+                         reiciendis cupiditate iure ratione, quidem perspiciatis est!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est repellat et aliquam omnis deserunt odio labore facere! Optio!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="service_settings statistick">
+            <div class="statistick_header">
+                <div class="statistick_name">
+                    <img src="image/icon/settings.png" alt="">
+                    <div class="staistick_label">
+                        statistick
+                    </div>
+                </div>
+                <img src="image/icon/arrow_drop_down.png" alt="">
+            </div>
+            <div class="statistick_block">
+                <div class="statistick_img">
+                    <img src="image/photo/statistick_image.png" alt="">
+                </div>
+                <div class="statistick_text">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse vitae, quae natus molestiae repudiandae eligendi
+                         reiciendis cupiditate iure ratione, quidem perspiciatis est!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est repellat et aliquam omnis deserunt odio labore facere! Optio!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="service_feed statistick">
+            <div class="statistick_header">
+                <div class="statistick_name">
+                    <img src="image/icon/rss_feed.png" alt="">
+                    <div class="staistick_label">
+                        statistick
+                    </div>
+                </div>
+                <img src="image/icon/arrow_drop_down.png" alt="">
+            </div>
+            <div class="statistick_block">
+                <div class="statistick_img">
+                    <img src="image/photo/statistick_image.png" alt="">
+                </div>
+                <div class="statistick_text">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse vitae, quae natus molestiae repudiandae eligendi
+                         reiciendis cupiditate iure ratione, quidem perspiciatis est!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est repellat et aliquam omnis deserunt odio labore facere! Optio!
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    </div>
+    </div>
+    <div class="customers">
+        <div class="customers_row">
+            dfg
+        </div>
+    </div>
 
 <script src="js/script.js"></script>
 </body>
