--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="statistick_name">
                             <img src="image/icon/group.png" alt="">
                             <div class="staistick_label">
-                                statistick
+                                team
                             </div>
                         </div>
                         <img src="image/icon/arrow_drop_down.png" alt="">
@@ -291,7 +291,7 @@
                         <div class="statistick_name">
                             <img src="image/icon/settings.png" alt="">
                             <div class="staistick_label">
-                                statistick
+                                settings
                             </div>
                         </div>
                         <img src="image/icon/arrow_drop_down.png" alt="">
@@ -319,7 +319,7 @@
                         <div class="statistick_name">
                             <img src="image/icon/rss_feed.png" alt="">
                             <div class="staistick_label">
-                                statistick
+                                feed
                             </div>
                         </div>
                         <img src="image/icon/arrow_drop_down.png" alt="">
