--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, illum veniam! Repellat facilis soluta
                 laborum aperiam, minus nemo?
             </div>
-            <div class="statistick_collumn">
-                <div class="service_statistick statistick">
+            <div class="statistick_collumn" id="statistickCollumnId">
+                <div class="service_statistick statistick" id="statistickId">
                     <div class="statistick_header">
                         <div class="statistick_name">
                             <img src="image/icon/trending_up.png" alt="">
@@ -216,7 +216,7 @@
                         <div class="statistick_img">
                             <img src="image/photo/statistick_image.png" alt="">
                         </div>
-                        <div class="statistick_text">
+                        <div class="statistick_text" id="statistickTextId">
                             <p>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse
                                 vitae, quae natus molestiae repudiandae eligendi
@@ -230,7 +230,7 @@
                     </div>
                 </div>
 
-                <div class="service_inbox statistick">
+                <div class="service_inbox statistick" id="inboxId">
                     <div class="statistick_header">
                         <div class="statistick_name">
                             <img src="image/icon/mail.png" alt="">
@@ -244,7 +244,7 @@
                         <div class="statistick_img">
                             <img src="image/photo/statistick_image.png" alt="">
                         </div>
-                        <div class="statistick_text">
+                        <div class="statistick_text" id="inboxTextId">
                             <p>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse
                                 vitae, quae natus molestiae repudiandae eligendi
@@ -258,7 +258,7 @@
                     </div>
                 </div>
 
-                <div class="service_team statistick">
+                <div class="service_team statistick" id="teamId">
                     <div class="statistick_header">
                         <div class="statistick_name">
                             <img src="image/icon/group.png" alt="">
@@ -272,7 +272,7 @@
                         <div class="statistick_img">
                             <img src="image/photo/statistick_image.png" alt="">
                         </div>
-                        <div class="statistick_text">
+                        <div class="statistick_text" id="teamIdText">
                             <p>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse
                                 vitae, quae natus molestiae repudiandae eligendi
@@ -286,7 +286,7 @@
                     </div>
                 </div>
 
-                <div class="service_settings statistick">
+                <div class="service_settings statistick" id="settingsId">
                     <div class="statistick_header">
                         <div class="statistick_name">
                             <img src="image/icon/settings.png" alt="">
@@ -300,7 +300,7 @@
                         <div class="statistick_img">
                             <img src="image/photo/statistick_image.png" alt="">
                         </div>
-                        <div class="statistick_text">
+                        <div class="statistick_text" id="statistickIdText">
                             <p>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse
                                 vitae, quae natus molestiae repudiandae eligendi
@@ -314,7 +314,7 @@
                     </div>
                 </div>
 
-                <div class="service_feed statistick">
+                <div class="service_feed statistick" id="feedId">
                     <div class="statistick_header">
                         <div class="statistick_name">
                             <img src="image/icon/rss_feed.png" alt="">
@@ -328,7 +328,7 @@
                         <div class="statistick_img">
                             <img src="image/photo/statistick_image.png" alt="">
                         </div>
-                        <div class="statistick_text">
+                        <div class="statistick_text" id="feedIdText">
                             <p>
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid accusantium esse
                                 vitae, quae natus molestiae repudiandae eligendi
