--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
                 </div>
             </div>
             <div class="customers_reviews">
-                <div class="reviews_button">
+                <div class="reviews_button" id="reviewBtnUp">
                     <button>
                         <img src="image/icon/reviews_btn_up.png" alt="">
                     </button>
                 </div>
                 <div class="reviews">
                     <div class="reviews_all">
-                        <div class="reviews_info">
+                        <div class="reviews_info" id="reviewInfo1">
                             <div class="reviews_img">
                                 <img src="image/photo/reviews_1.png" alt="">
                             </div>
@@ -385,7 +385,83 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="reviews_info">
+                        <div class="reviews_info" id="reviewInfo2">
+                            <div class="reviews_img">
+                                <img src="image/photo/reviews_2.png" alt="">
+                            </div>
+                            <div class="reviews_block">
+                                <div class="review_label_text">
+                                    <div class="reviews_label">
+                                        John Doe
+                                    </div>
+                                    <div class="reviews_text">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore adipisci
+                                        nisi earum at aspernatur optio reprehenderit
+                                        tempora. Blanditiis, ipsa at? Illo neque illum facere obcaecati delectus
+                                        voluptas. In fugit corrupti veniam fuga illo
+                                        nesciunt.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews_info" id="reviewInfo3">
+                            <div class="reviews_img">
+                                <img src="image/photo/reviews_2.png" alt="">
+                            </div>
+                            <div class="reviews_block">
+                                <div class="review_label_text">
+                                    <div class="reviews_label">
+                                        John Doe
+                                    </div>
+                                    <div class="reviews_text">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore adipisci
+                                        nisi earum at aspernatur optio reprehenderit
+                                        tempora. Blanditiis, ipsa at? Illo neque illum facere obcaecati delectus
+                                        voluptas. In fugit corrupti veniam fuga illo
+                                        nesciunt.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews_info" id="reviewInfo4">
+                            <div class="reviews_img">
+                                <img src="image/photo/reviews_2.png" alt="">
+                            </div>
+                            <div class="reviews_block">
+                                <div class="review_label_text">
+                                    <div class="reviews_label">
+                                        John Doe
+                                    </div>
+                                    <div class="reviews_text">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore adipisci
+                                        nisi earum at aspernatur optio reprehenderit
+                                        tempora. Blanditiis, ipsa at? Illo neque illum facere obcaecati delectus
+                                        voluptas. In fugit corrupti veniam fuga illo
+                                        nesciunt.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews_info" id="reviewInfo5">
+                            <div class="reviews_img">
+                                <img src="image/photo/reviews_2.png" alt="">
+                            </div>
+                            <div class="reviews_block">
+                                <div class="review_label_text">
+                                    <div class="reviews_label">
+                                        John Doe
+                                    </div>
+                                    <div class="reviews_text">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore adipisci
+                                        nisi earum at aspernatur optio reprehenderit
+                                        tempora. Blanditiis, ipsa at? Illo neque illum facere obcaecati delectus
+                                        voluptas. In fugit corrupti veniam fuga illo
+                                        nesciunt.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews_info" id="reviewInfo6">
                             <div class="reviews_img">
                                 <img src="image/photo/reviews_2.png" alt="">
                             </div>
@@ -406,7 +482,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="reviews_button">
+                <div class="reviews_button" id="reviewBtnDown">
                     <button>
                         <img src="image/icon/reviews_btn_down.png" alt="">
                     </button>
@@ -414,7 +490,6 @@
             </div>
         </div>
     </div>
-
     <script src="js/script.js"></script>
 </body>
 
