--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/info_list.css">
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/customers.css">
+    <link rel="stylesheet" href="css/team.css">
 </head>
 
 <body>
@@ -486,6 +487,99 @@
                     <button>
                         <img src="image/icon/reviews_btn_down.png" alt="">
                     </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="our_team">
+        <div class="team_content">
+            <div class="team_content_text">
+                <div class="team_label">
+                    OurTeam
+                </div>
+                <div class="team_text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae veritatis voluptate soluta laborum
+                    ducimus dolorum fugit reprehenderit velit.
+                </div>
+            </div>
+            <div class="team_collumn">
+                <div class="team_row">
+                    <div class="team_image_row">
+                        <div class="team_row_image team_image_hidden" id="teamImage1">
+                            <img src="image/photo/TeamPhoto1.png" alt="">
+                        </div>
+                        <div class="team_row_image team_image_visibile" id="teamImage2">
+                            <img src="image/photo/TeamPhoto1.png" alt="">
+                        </div>
+                        <div class="team_row_image team_image_hidden" id="teamImage3">
+                            <img src="image/photo/TeamPhoto1.png" alt="">
+                        </div>
+                    </div>
+                    <!-- <div class="team_row_info_collumn"> -->
+                        <div class="team_row_info team_text_hidden" id="teamText1">
+                            <div class="team_info_name">
+                                Sophie Turner
+                            </div>
+                            <div class="team_info_text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing
+                                elit, sed do eiusmod tempor incididunt
+                                <br>
+                                Text 1
+                            </div>
+                            <div class="team_info_social">
+                                <ul>
+                                    <li><a href="#" target="blanc"><img src="image/icon/twitter.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/Facebook.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/in.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/ball.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/be.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team_row_info team_text_visibility" id="teamText2">
+                            <div class="team_info_name">
+                                Sophie Turner
+                            </div>
+                            <div class="team_info_text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing
+                                elit, sed do eiusmod tempor incididunt
+                                <br>
+                                Text 2
+                            </div>
+                            <div class="team_info_social">
+                                <ul>
+                                    <li><a href="#" target="blanc"><img src="image/icon/twitter.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/Facebook.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/in.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/ball.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/be.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team_row_info team_text_hidden" id="teamText3">
+                            <div class="team_info_name">
+                                Sophie Turner
+                            </div>
+                            <div class="team_info_text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing
+                                elit, sed do eiusmod tempor incididunt
+                                <br>
+                                Text 3
+                            </div>
+                            <div class="team_info_social">
+                                <ul>
+                                    <li><a href="#" target="blanc"><img src="image/icon/twitter.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/Facebook.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/in.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/ball.png" alt=""></a></li>
+                                    <li><a href="#" target="blanc"><img src="image/icon/be.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
